Hero Section Finished, plans of adding profile picture in the future

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,10 @@
   bg-[#f4ebff] bg-opacity-[12%] absolute;
 }
 
+.highlight {
+  @apply bg-primary text-white px-5 rounded-[4px]
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
