--- a/app/globals.css
+++ b/app/globals.css
@@ -17,23 +17,6 @@
   --card: #1d1d1d;
 }
 
-.circle-icon {
-  @apply flex items-center justify-center
-  rounded-full w-11 h-11 md:w-14 md:h-14
-  bg-[#f4ebff] bg-opacity-[12%] absolute;
-}
-
-.highlight {
-  @apply bg-primary text-white px-5 rounded-[4px];
-}
-
-.section-contents {
-  @apply w-full flex flex-col items-center gap-10 md:gap-[50px];
-}
-
-.card {
-  @apply bg-card rounded-lg card-shadow;
-}
 
 body {
   color: var(--foreground);
@@ -42,7 +25,27 @@ body {
 }
 
 @layer components {
+    .card {
+      @apply bg-card rounded-lg card-shadow;
+    }
     .card-shadow {
       @apply shadow-[0_3px_10px_rgb(0,0,0,0.2)];
+    }
+    .circle-icon {
+      @apply flex items-center justify-center
+      rounded-full w-11 h-11 md:w-14 md:h-14
+      bg-[#f4ebff] bg-opacity-[12%] absolute;
+    }
+    .highlight {
+      @apply bg-primary text-white px-5 rounded-[4px];
+    }
+    
+    .section-contents {
+      @apply w-full flex flex-col items-center gap-10 md:gap-[50px];
+    }
+    
+    .contact-button{
+      @apply p-1.5 rounded-md card-shadow flex
+      items-center justify-center w-8 h-8;
     }
 }
